// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileFriends - Snapshots > matches snapshot when loading 1`] = `
<div>
  <div
    class="mt-6 gap-4 lg:mt-0"
    data-testid="container"
  >
    <h5
      data-testid="heading"
    >
      Friends
    </h5>
    <div
      class="gap-3.5 rounded-md bg-transparent p-0 lg:gap-3 lg:bg-card lg:p-6"
      data-testid="container"
    >
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
      <div
        data-testid="user-list-item-skeleton-full"
      >
        Skeleton
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileFriends - Snapshots > matches snapshot with connections 1`] = `
<div>
  <div
    class="mt-6 gap-4 lg:mt-0"
    data-testid="container"
  >
    <h5
      data-testid="heading"
    >
      Friends 
      (2)
    </h5>
    <div
      class="gap-3.5 rounded-md bg-transparent p-0 lg:gap-3 lg:bg-card lg:p-6"
      data-testid="container"
    >
      <div
        data-follow-button-variant="icon"
        data-testid="user-list-item"
        data-user-id="user-1"
      >
        User item
      </div>
      <div
        data-follow-button-variant="icon"
        data-testid="user-list-item"
        data-user-id="user-2"
      >
        User item
      </div>
    </div>
    <div
      class="h-1"
    />
  </div>
</div>
`;

exports[`ProfileFriends - Snapshots > matches snapshot with no connections 1`] = `
<div>
  <div
    class="mt-6 lg:mt-0"
    data-testid="container"
  >
    <div
      data-testid="friends-empty"
    >
      No friends
    </div>
  </div>
</div>
`;
